[package]
name = "ibkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.2.4"
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
yew = "0.19.3"
yew-router = "0.16.0"
