[package]
name = "ibkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
gloo-net = "0.2.4"
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
yew = {version = "0.20", features = ["csr"]}
yew-router = "0.17.0"
